<resources>
    <string name="app_name">创新汉语</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_error">网络错误，请稍后重试</string>
    <string name="parse_error">数据解析失败</string>
    <string name="login_error">登录失败</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_data">暂无数据</string>
    <string name="mycourse_title1">当前课程</string>
    <string name="mycourse_title2">完成课程</string>
    <string name="txt_add_more">添加更多</string>
    <string name="category_title">课程分类</string>
    <string name="shuaixuan_flag1">等级</string>
    <string name="shuaixuan_flag2">筛选</string>
    <string name="hint_email_text">邮箱</string>
    <string name="hint_password_text">密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="tv_forget">忘记密码？</string>
    <string name="tv_othe_type">第三方登录</string>
    <string name="language_cn">中文</string>
    <string name="language_en">英文</string>
    <string name="toast_no_email">请输入邮箱账号</string>
    <string name="toast_no_password">请输入密码</string>
    <string name="toast_email_irregular">输入的邮箱账号不合法</string>
    <string name="user_name">昵称:</string>
    <string name="user_id">邮箱:</string>
    <string name="txt_buy_vip">购买会员</string>
    <string name="txt_language">语言</string>
    <string name="txt_skins">皮肤</string>
    <string name="order_center">订单中心</string>
    <string name="upload_head_txt">点击上传头像</string>
    <string name="nickname_txt">昵称</string>
    <string name="sex_txt">性别</string>
    <string name="age_txt">年龄</string>
    <string name="sign_txt">签名</string>
    <string name="edit_hint_email">输入邮箱</string>
    <string name="edit_hint_nickname">输入昵称</string>
    <string name="edit_hint_phone">输入手机号</string>
    <string name="edit_hint_pwd">输入密码</string>
    <string name="edit_hint_confirm_pwd">确认密码</string>
    <string name="txt_send">发送</string>
    <string name="edit_hint_code">输入验证码</string>
    <string name="edit_hint_newpwd">输入新密码</string>
    <string name="edit_hint_confirm_newpwd">确认新密码</string>
    <string name="txt_submit">提交</string>
    <string name="txt_title_forgot_pwd">忘记密码</string>
    <string name="txt_upload_head">上传头像</string>
    <string name="txt_sex_male">男</string>
    <string name="txt_sex_female">女</string>
    <string name="txt_finished_unit">请先完成上个单元的闯关</string>
    <string name="txt_addcourse_success">添加课程成功</string>
    <string name="txt_toast_email">请输入邮箱</string>
    <string name="txt_toast_email_not_normal">邮箱格式不正确</string>
    <string name="txt_toast_nickname">请输入昵称</string>
    <string name="txt_toast_phone">请输入手机号</string>
    <string name="txt_toast_pwd">请输入密码</string>
    <string name="txt_toast_confirm_pwd">两次输入密码不一致</string>
    <string name="txt_toast_code">请输入验证码</string>
    <string name="txt_logout">退出</string>
    <string name="txt_is_save">是否保存修改?</string>
    <string name="txt_sure">是</string>
    <string name="txt_cancel">否</string>
    <string name="txt_age_unnormal">请输入正确的年龄格式</string>
    <string name="txt_challenge">挑战</string>
    <string name="txt_bottle_green">深绿色</string>
    <string name="txt_light_green">浅绿色</string>
    <string name="txt_message">消息</string>
    <string name="txt_setting">设置</string>
    <string name="txt_clear_cache">清除缓存</string>
    <string name="txt_about">关于</string>
    <string name="txt_pop_info">确定清除缓存?</string>
</resources>
