<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yueworld.baseproject.ui.login.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edit_hint_email"
                android:padding="0dp"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/txt_size_13" />

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorBottomBg"
                android:gravity="center"
                android:text="@string/txt_send"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <View style="@style/line_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_input_code" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/edit_hint_code"
                android:padding="0dp"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/txt_size_13" />

        </LinearLayout>

        <View style="@style/line_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/edit_hint_newpwd"
                android:padding="0dp"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/txt_size_13" />

        </LinearLayout>

        <View style="@style/line_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/et_confirm_newpwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/edit_hint_confirm_newpwd"
                android:padding="0dp"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:textSize="@dimen/txt_size_13" />

        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:background="@color/colorToolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_sumit"
            android:text="@string/txt_submit"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_14"
            android:background="@color/colorToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>
</LinearLayout>

