<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:background="@drawable/bg_white_progress"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_shuoming"
                android:text="@string/txt_is_save"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_size_13"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            style="@style/line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_sure"
                android:text="@string/txt_sure"
                android:gravity="center"
                android:textSize="@dimen/txt_size_15"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <View
                style="@style/line_view"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/tv_cancel"
                android:text="@string/txt_cancel"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/txt_size_15"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>