<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yueworld.baseproject.ui.login.activity.RegisterActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_email"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_email"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:singleLine="true"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/txt_size_13"
                android:inputType="textEmailAddress"
                android:hint="@string/edit_hint_email"
                android:textColorHint="@color/colorHint"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <View
           style="@style/line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_nickname"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_nickname"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:singleLine="true"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/txt_size_13"
                android:hint="@string/edit_hint_nickname"
                android:textColorHint="@color/colorHint"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <View
            style="@style/line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_phone"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_phone"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:singleLine="true"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/txt_size_13"
                android:hint="@string/edit_hint_phone"
                android:textColorHint="@color/colorHint"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <View
            style="@style/line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_pwd"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:singleLine="true"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/txt_size_13"
                android:hint="@string/edit_hint_pwd"
                android:textColorHint="@color/colorHint"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <View
            style="@style/line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_confirm_pwd"
                android:textCursorDrawable="@drawable/edit_cursor_drawable"
                android:singleLine="true"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/txt_size_13"
                android:hint="@string/edit_hint_confirm_pwd"
                android:textColorHint="@color/colorHint"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.CardView
        android:background="@color/colorToolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_sign_up"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_14"
            android:background="@color/colorToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>
</LinearLayout>
